cmake_minimum_required(VERSION 3.10)
project(LeetCodeLibrary CXX)

# C++17 standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Compiler flags
if(MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra)
endif()

# Include directories
include_directories(${CMAKE_SOURCE_DIR}/include)

# Source files
set(SOURCES
    src/FuncRunner.cpp
    src/fun_0846tAu2TyKuXpdU.cpp
    src/fun_08B1Nx5r9VEaMpns.cpp
    src/fun_0HG2YEcxfqxbNm63.cpp
    src/fun_0MX7AS9tiiulsKhq.cpp
    src/fun_0RyoC4MpRun7oDc3.cpp
    src/fun_0YL5vk2RgVXUdMCi.cpp
    src/fun_0ZrdjnISYJXibUfK.cpp
    src/fun_0berivgWkjgDAtOG.cpp
    src/fun_0eNrbFt6j3fTRVLh.cpp
    src/fun_0mUO8vQVlZ5LfdxB.cpp
    src/fun_0t9hwwH23W8NG10T.cpp
    src/fun_0u1XkO9VpcSnQ1eh.cpp
    src/fun_0uIuKyw62vIBB5Gt.cpp
    src/fun_0zRpDKZq5Ac6gAAM.cpp
    src/fun_14jl8zZ7WVKQ6UMa.cpp
    src/fun_1AFvCLMdRvcd9pgN.cpp
    src/fun_1BYtrqQMDiVByNv8.cpp
    src/fun_1BtihbTfL6iYwl3H.cpp
    src/fun_1POSpuNqCXgJncpJ.cpp
    src/fun_1RoNP53IbtYLrd7d.cpp
    src/fun_1bf2svcmPxIYuOix.cpp
    src/fun_1owam6I8BbLep3kV.cpp
    src/fun_1vZYSec2fbqPd9xS.cpp
    src/fun_1xmOi8UjjRZVeNTq.cpp
    src/fun_1yxH7W0l4nB3ZsZv.cpp
    src/fun_20ghevocX6HEGjaA.cpp
    src/fun_21571UlpjbgSdRw1.cpp
    src/fun_29WmX0zCl2vEq7so.cpp
    src/fun_2BXRUaQ9cewRebEp.cpp
    src/fun_2Dts6qtsmKyEA9Ma.cpp
    src/fun_2Ir9Wv9lCGg9F8l2.cpp
    src/fun_2LHQMh8c1q4VGoXE.cpp
    src/fun_2Nb1gH8BLqqGCyBC.cpp
    src/fun_2XCSxPt36e6B98y2.cpp
    src/fun_2ch3pMAIl5zp7juw.cpp
    src/fun_2iSp5HRRdnr4F2Jx.cpp
    src/fun_2jPtsr1N8imFwKOO.cpp
    src/fun_2qTXkMbmKJXIKbx7.cpp
    src/fun_2qs7i8gfOwcNRiwv.cpp
    src/fun_2tym0HC3kiUOt6dM.cpp
    src/fun_33N9FjyHLO4uWUMN.cpp
    src/fun_39koIaBicG4MmoD5.cpp
    src/fun_3C33xzeeNzEsJYHU.cpp
    src/fun_3HGQ3AEfbVPftn0r.cpp
    src/fun_3L2qV2EsDdCNRDNE.cpp
    src/fun_3MTWjX3Ugq4m9ILU.cpp
    src/fun_3YtEwX8UdcYKZHSC.cpp
    src/fun_3ZoWz0RDzrVmSj6z.cpp
    src/fun_3bxuD3nfQyDgentz.cpp
    src/fun_3dA5zquPq2J1drwu.cpp
    src/fun_3iAHR4BpyD0V7ikB.cpp
    src/fun_3jqRg886xszjjPi3.cpp
    src/fun_3kdfynuBTN7VdJNG.cpp
    src/fun_3uf0WLMTkw9mFFhX.cpp
    src/fun_3zgkuB1mDISRjGSX.cpp
    src/fun_45bpvfxxA2KZNBEs.cpp
    src/fun_4F99DVm46yCRi9TG.cpp
    src/fun_4Frnjt7dAc9kOroG.cpp
    src/fun_4O78gDoEM2GS3DDh.cpp
    src/fun_4dBgkTPUYszArwWm.cpp
    src/fun_4oWs3J8A8AgqFmrj.cpp
    src/fun_4pMUFpUmnUweQmYm.cpp
    src/fun_54YtyBexUm56pB04.cpp
    src/fun_5Br7IukQDjALoPsi.cpp
    src/fun_5E6DS49auB1IoRBb.cpp
    src/fun_5KiAo88DP1A4J7ZX.cpp
    src/fun_5a4JxraevqQs0Jmo.cpp
    src/fun_5cBCJcNPqfPNBz2m.cpp
    src/fun_5clOwciwTd8AYZaQ.cpp
    src/fun_5gzT6X2lECFtJR7Y.cpp
    src/fun_5hV3Q9WFLjnw0Amy.cpp
    src/fun_5jnGvmXmTWbS1cvn.cpp
    src/fun_5kO5mbrL31lxuhpc.cpp
    src/fun_5rAz3s3kv1DBVaYt.cpp
    src/fun_5t77mp3MQj83DvRK.cpp
    src/fun_5xzzB0gMmSkmknYT.cpp
    src/fun_63CEydZpwfgz6gHJ.cpp
    src/fun_66lGdjqdlHdZUqQN.cpp
    src/fun_68VfgT3uZiu7FT3l.cpp
    src/fun_6CNJnRIGPGeclKwg.cpp
    src/fun_6HFoBof04rxkBPxm.cpp
    src/fun_6KrlBELelhhxHaRW.cpp
    src/fun_6Oro8L8NOzS7bYDm.cpp
    src/fun_6Q1eWHPtVRk7vpym.cpp
    src/fun_6S7eDzh2YyjTEAw2.cpp
    src/fun_6VIkb8OmG2XkNTBs.cpp
    src/fun_6b2mcUzIdJKUGd40.cpp
    src/fun_6cFBXU9MXuWo47Ux.cpp
    src/fun_6mPio71oNv5I4zJs.cpp
    src/fun_6mWWmNi08QDzhasr.cpp
    src/fun_6mxkdcIYAYUZ8uVy.cpp
    src/fun_6o8m34gYiGsOdYrA.cpp
    src/fun_6yaT0FB5RG2oO2Xr.cpp
    src/fun_71M69k4NYtRJcCXX.cpp
    src/fun_77IwifC8tMavc3vI.cpp
    src/fun_77dYzS1kP6bFm61d.cpp
    src/fun_7QqIeZ2yn7tCvAm6.cpp
    src/fun_7RnxQ5osUM5kzwV2.cpp
    src/fun_7TiDLhasLF2gbAzg.cpp
    src/fun_7UL7RfZckzt0PgoC.cpp
    src/fun_7iIhY7dxc91zZhDU.cpp
    src/fun_7kibHHSzP1Ku0da6.cpp
    src/fun_7krQwb1ErscH3c8K.cpp
    src/fun_7mGl7FENGaEzTq6d.cpp
    src/fun_7qgY94zlEUBaweoX.cpp
    src/fun_7rIbOAEd7RJMnfkv.cpp
    src/fun_7uMmQMlk0WNpGFQj.cpp
    src/fun_8AjZYCiAzowz742O.cpp
    src/fun_8EhtBfS5jLebUGa1.cpp
    src/fun_8GQ2roALiCd4CmWg.cpp
    src/fun_8TAP58LEXR1smt94.cpp
    src/fun_8WtQox2pkXP8jhcK.cpp
    src/fun_8YrNA8u2DPh3zUph.cpp
    src/fun_8ZXlyCqlzonZdTN8.cpp
    src/fun_8ei8nr8BJBTX1VwO.cpp
    src/fun_8hxsmzXrU9ERZykY.cpp
    src/fun_8je9jT8wapAFB2WW.cpp
    src/fun_8lbHCVFYZ893mSDU.cpp
    src/fun_8rotRbdkBRz5sO20.cpp
    src/fun_8uq1LoGiltXxCCNF.cpp
    src/fun_8vWAwUMJC8IdCn9K.cpp
    src/fun_8weiJwHiz12DM3K0.cpp
    src/fun_8y2SmvP2RHV1A5TY.cpp
    src/fun_91nCCAyl67STNPyX.cpp
    src/fun_9BCoyMhMfyTRhsTV.cpp
    src/fun_9Exzrh7j01YfuN18.cpp
    src/fun_9JswvBPQtTIgJZA1.cpp
    src/fun_9MGYYcivNCqRyG8W.cpp
    src/fun_9Smp1aMITDUGSJrZ.cpp
    src/fun_9Yzwwx0KVS3KRmJq.cpp
    src/fun_9eNY9mO02G1aj5fq.cpp
    src/fun_9gatCV8GjZRvzLIh.cpp
    src/fun_9mb27w1vYW9VU5Ko.cpp
    src/fun_9oxVOTbZHXuMWwn0.cpp
    src/fun_9twB8InJzkGdV9V4.cpp
    src/fun_9xRk4p9z2Smigwhj.cpp
    src/fun_A1JLixtWtWIoXQOM.cpp
    src/fun_A8szFoVUGFslYVOK.cpp
    src/fun_AW0Z7vXcieDYvuYP.cpp
    src/fun_AWlHedkTOi6ZG0DD.cpp
    src/fun_AZVkGP6BTvnNis37.cpp
    src/fun_AZXknkljTUUEq8Bz.cpp
    src/fun_AZquiqXo6w4sdXFU.cpp
    src/fun_AcKL2U01IGxEGBIQ.cpp
    src/fun_AcpYKSh7bCn2R2Vw.cpp
    src/fun_AksE8TqSTP488Zda.cpp
    src/fun_AnjUe9oPFiicrnMT.cpp
    src/fun_AsOTso3eXbexr8nB.cpp
    src/fun_AwwDOl6EgcITA4Eh.cpp
    src/fun_B4Wk4olR79U152fe.cpp
    src/fun_BAr1wWIoaogzH7uu.cpp
    src/fun_BCYyPsMPt9i033iM.cpp
    src/fun_BFUVhiPQq1VAMNkk.cpp
    src/fun_BGeJiyo1rIGDQHzf.cpp
    src/fun_BGiwJ42ROa3BeK0T.cpp
    src/fun_BNugk3OYFDMgWnTk.cpp
    src/fun_BPDQb0DJ2WhOn2Hr.cpp
    src/fun_BVSHeEl1Zl2TvkR0.cpp
    src/fun_BVdGXHellFEURlZJ.cpp
    src/fun_BbowdYsyT9lVQrd8.cpp
    src/fun_BuaSfWysr05Lhl7J.cpp
    src/fun_BvvK030cFDGNbY5v.cpp
    src/fun_BziIKKEyuaEDtWxp.cpp
    src/fun_C5gOXhR6L8yTKJps.cpp
    src/fun_C6U4dhe3FSFbZILp.cpp
    src/fun_CBfyfNLexKlpup7l.cpp
    src/fun_CDDmH1aRnFmVYkHO.cpp
    src/fun_CHdP92bZ66Esmu3Q.cpp
    src/fun_CSiATk4dJTcNGK90.cpp
    src/fun_CaklTMVJhQ8uQtAN.cpp
    src/fun_CcBynqXjGsIHTJee.cpp
    src/fun_CsoMWZtSlIuMHWsX.cpp
    src/fun_CugXmIlQxZWlF9ge.cpp
    src/fun_CvVMKIp0qbkcc7vI.cpp
    src/fun_Cw7D4XVP5ifAVz9T.cpp
    src/fun_D1BssENAeDw9eE0P.cpp
    src/fun_D781DCV1ujFt2FZ9.cpp
    src/fun_D9ErNpABed8UW3BD.cpp
    src/fun_DBkVQOdDyJkgAAnd.cpp
    src/fun_DCuTgtKkHcFSPDQw.cpp
    src/fun_DDm1KVpzO9LxEBdi.cpp
    src/fun_DHDuIvN357zeDLl3.cpp
    src/fun_DOX1M93HQuczxXD6.cpp
    src/fun_DW6rUx37mVTZ4TRU.cpp
    src/fun_DYBPySzG7KubcZSn.cpp
    src/fun_DaQL30CQoDgPeFW4.cpp
    src/fun_DjU8UDYnGadj107w.cpp
    src/fun_Dl53Ov34dNjLt8YW.cpp
    src/fun_DmLG0KFef3Mk2gw9.cpp
    src/fun_DtMJRwOEqHa2xLf3.cpp
    src/fun_Dvt6i5kCTjLQ2sGg.cpp
    src/fun_DxIZ9wnpLy8GQovj.cpp
    src/fun_Dy0VhIgHUsT9fSJu.cpp
    src/fun_E6q0OVrdxsBm2kev.cpp
    src/fun_E7dD3L2qZhunuoWR.cpp
    src/fun_EAvVXhKZfMDj5FQ4.cpp
    src/fun_EAxwN38aJddPnwDn.cpp
    src/fun_EIMqSilcVbcE10D0.cpp
    src/fun_EQAWAJqIhqqT13Us.cpp
    src/fun_EV6e6HP5BXdrWSBv.cpp
    src/fun_EVdLqaraXfWqhH0S.cpp
    src/fun_EeMaos1AZlca9WKZ.cpp
    src/fun_EpV2tB9MzwbN8k7R.cpp
    src/fun_EtEl03KTRsIq5RUK.cpp
    src/fun_EtqxZGAHoPx1dIgP.cpp
    src/fun_EumvjmQtaq6Eu9IC.cpp
    src/fun_Ex6vfwGBYLfxerrD.cpp
    src/fun_FBBeKRBStz5yCQml.cpp
    src/fun_FDz91vnNhDKQdQsN.cpp
    src/fun_FEs4zGDJiiP1tn3R.cpp
    src/fun_FLPjDdXN6w7dOCHW.cpp
    src/fun_FOMzKyL9ynO1qT0e.cpp
    src/fun_FTODexUbbSocFyNJ.cpp
    src/fun_FVTqrrgnk5FVJ0My.cpp
    src/fun_FgAAGmxkask0WWbW.cpp
    src/fun_FhZqrg2uRMmp9QOk.cpp
    src/fun_FnxW6CUErat96uFI.cpp
    src/fun_Fpy9Q5744XIgJIwd.cpp
    src/fun_Fq7G0prG2ust7eNt.cpp
    src/fun_FqY6ljU2CeqwEmCc.cpp
    src/fun_Fsawa1spVHw2n3fG.cpp
    src/fun_G4fBvPzGepVHuuBr.cpp
    src/fun_G4rxuYCS5T57b4h9.cpp
    src/fun_G6j5kFsC3VwYzZzX.cpp
    src/fun_G95kU1FIFQAIpKEP.cpp
    src/fun_GDh0AZnET3ThVMEP.cpp
    src/fun_GEdwGjVSjSZ6qhi3.cpp
    src/fun_GGhTWHilLMqvKYlL.cpp
    src/fun_GGpSULTXwXblQDdl.cpp
    src/fun_GKXtHCkNmhxvjwsb.cpp
    src/fun_GTuVq358XGI2O6jR.cpp
    src/fun_GeZe1RZBc0tMcB6O.cpp
    src/fun_GgzRU4o80D9hPBeq.cpp
    src/fun_GhYUiPKTawSHO94y.cpp
    src/fun_Gm2Hla7R6yJL3oLX.cpp
    src/fun_GuU4ZMfIq0dL1Lsu.cpp
    src/fun_H0gyzLCKtCgfMcaL.cpp
    src/fun_H4YVc1KSaxGxurHp.cpp
    src/fun_H6aL5ri78fX9vne9.cpp
    src/fun_H7tNXSApIXfwioLt.cpp
    src/fun_HHGD9DvzdL8JQcfp.cpp
    src/fun_HNwq897Iqj1NNQkN.cpp
    src/fun_HR0hNJXnAidQ63rC.cpp
    src/fun_HSn7F0gWfaUEwH7h.cpp
    src/fun_HW5uX3Z7xSXPlwU0.cpp
    src/fun_HXYsyG2ZPfdihEr3.cpp
    src/fun_HdLFdGQGsK3alkqP.cpp
    src/fun_HetxBqQ8W2SJrpi5.cpp
    src/fun_HkcfGwZxXbJQlhbP.cpp
    src/fun_HqDwpBYP1gnXFmmq.cpp
    src/fun_I0WRxmkRdqGpCuYO.cpp
    src/fun_I5BSE9OXzGpS2E7x.cpp
    src/fun_IDhLmFloebZEnN99.cpp
    src/fun_IEn5njVcBnW0b5A5.cpp
    src/fun_IGbzmzo9G2Tb4V2c.cpp
    src/fun_IN42Lu8Hmgd6aImk.cpp
    src/fun_IPCVxG027XcDAxqe.cpp
    src/fun_ISBsKaUsucxt3vbv.cpp
    src/fun_ITONsRL6XW49ue8q.cpp
    src/fun_IcoEOUMGi6qqInBY.cpp
    src/fun_IhWj0pjVIusjBQKf.cpp
    src/fun_IiizoohWaSZAXYAt.cpp
    src/fun_ImKPrCdydPNy5eti.cpp
    src/fun_Is0Lvmlad455F0WP.cpp
    src/fun_J0fzHaA1OAHMvSGr.cpp
    src/fun_J7lkDJPejyZyd9Y9.cpp
    src/fun_J7xbXo0i4VYspiRZ.cpp
    src/fun_JCD98RXxe4DvWLtk.cpp
    src/fun_JK06EpfvZy0Ik7EM.cpp
    src/fun_JKWvcRPrDgjwg2fP.cpp
    src/fun_JMJG3y9MRoYSftra.cpp
    src/fun_JMPk9OHXAKKU1D2v.cpp
    src/fun_JTcXkxRSGOlQJjHv.cpp
    src/fun_JXErkGbxYktCETYx.cpp
    src/fun_JY631hrnLM9kZLeb.cpp
    src/fun_JYoOwC8dH4J1SZjy.cpp
    src/fun_JZ59BoEuRSDi6cW8.cpp
    src/fun_Jb5oQZn6qeVkQhiL.cpp
    src/fun_JlpK6qZc0UkLX4OC.cpp
    src/fun_Jt1LqDL1eNO7FGdS.cpp
    src/fun_JvlL6zsIRlQqnbLm.cpp
    src/fun_K0lPP9tGyN2BpENU.cpp
    src/fun_K1ufyuzjhbmFH9EZ.cpp
    src/fun_K8hARXszbnJhPGWc.cpp
    src/fun_K9B5q1Tg7zwC0t0b.cpp
    src/fun_KGAalZYdoc75pEOy.cpp
    src/fun_KMUc4XaxbqMFbBZO.cpp
    src/fun_KOfsWGz21kWBPL2y.cpp
    src/fun_KQy0qZ0YUGLCQeRK.cpp
    src/fun_KRkaKY7WCcHCFfDA.cpp
    src/fun_KfFjXs8rsnYRePdT.cpp
    src/fun_KiaaS4koJuHh1caR.cpp
    src/fun_KkGee0LatmLpXkFj.cpp
    src/fun_KoYbPVpeVheJsDf0.cpp
    src/fun_Kqztg0gVQaxJrjEt.cpp
    src/fun_KsxW9COQLGGz8LCH.cpp
    src/fun_KtQTkO0ouTB7QiVk.cpp
    src/fun_L1Ehqrf7NdrsTAyD.cpp
    src/fun_L2RpKwyyZzJ29Wsy.cpp
    src/fun_L5G1aFL2whnRdZPo.cpp
    src/fun_L82lU91B80JhHQeQ.cpp
    src/fun_LDRchL7JXsxFNaHp.cpp
    src/fun_LGKF4DVhiZNwG4u6.cpp
    src/fun_LShpx0NqPe1U22Ho.cpp
    src/fun_LUZeLbfglzMJ3e7u.cpp
    src/fun_Lq4C3wRoPWCunX7F.cpp
    src/fun_Lz6PFSeF0OgNQ0lE.cpp
    src/fun_LzsS4pEFO8lGxS6Q.cpp
    src/fun_M0Gz5a1dBy2rE1Tq.cpp
    src/fun_M3Xxk0yWhx84ZgAI.cpp
    src/fun_M3gTnBuLSMtXQUxN.cpp
    src/fun_MCyMCCtfuE66EadD.cpp
    src/fun_ME29Qss2NkWXxsum.cpp
    src/fun_MEQ8fgDGfUbRwSpK.cpp
    src/fun_MExI8stiJSOfZM2b.cpp
    src/fun_MLAN0EDJvSq3PlvX.cpp
    src/fun_MN9lzwwrM7aeZ3eP.cpp
    src/fun_MTn5XHPw0vGVIeBm.cpp
    src/fun_MZId3ctWoRFYkxnS.cpp
    src/fun_Mj91JuUDeoa1vHAT.cpp
    src/fun_Mju2xhvG5ZDdvTpL.cpp
    src/fun_MpmYQ7bfyqOojl2c.cpp
    src/fun_MtEU5nZxNSElGy9D.cpp
    src/fun_MvKogYDfda01X2dL.cpp
    src/fun_MwagxVp11T5zZIhx.cpp
    src/fun_MzIYfdi1lQcaxoIE.cpp
    src/fun_NFOYnB5MjB4PG5Mv.cpp
    src/fun_NHqDCjKvN5Yg4Ztr.cpp
    src/fun_NZ12jCvoCR70dBd3.cpp
    src/fun_NZz5nUGzIfYvbjB0.cpp
    src/fun_Nbsk6tbQK4Q0aXtt.cpp
    src/fun_NdunVGaJ03zsI2WH.cpp
    src/fun_Nj8VHoCE58qwWPua.cpp
    src/fun_O2pSuK03JAIf1KHz.cpp
    src/fun_O7ahMty42ASqNH9T.cpp
    src/fun_OAbLHKciICQkudPC.cpp
    src/fun_ODc8hF9IEv2uMutX.cpp
    src/fun_OOkCaSF4bXerEOaV.cpp
    src/fun_OVDQNoMSg2nPanix.cpp
    src/fun_OZeVJpuI3TX3Di96.cpp
    src/fun_OgvCFBCaVxLmpgQj.cpp
    src/fun_OpRVb0I0QPjtGNQW.cpp
    src/fun_OwWq8LKKbcL8fbop.cpp
    src/fun_Oyhwvm0bwYBYufkc.cpp
    src/fun_P01uK8rOBCfOLR4C.cpp
    src/fun_P12aW5u1NCbW8jyW.cpp
    src/fun_PLHGJGfomXdE4f8x.cpp
    src/fun_PMtIBWLTL13CJnE2.cpp
    src/fun_PUoIwd6Np3pLO5UU.cpp
    src/fun_PVUfBgBWvjKjOL2U.cpp
    src/fun_PVe8NPXuUIFFjpke.cpp
    src/fun_PYjImomtpSSPxmq3.cpp
    src/fun_PdtZ2smidZypIEfF.cpp
    src/fun_PdvKRE4biK7VIIm8.cpp
    src/fun_PkKEWfmRSOnc71Pt.cpp
    src/fun_PkPSs6TMcEExxs97.cpp
    src/fun_PzaR9CIAdLNmzAnI.cpp
    src/fun_Q565qrMODzi6sJ0a.cpp
    src/fun_QF1ZHYE97AzQczy7.cpp
    src/fun_QHCU1jDN9uMN2VNC.cpp
    src/fun_QJo8vBFOsIGVkpTh.cpp
    src/fun_QNDLT66Z6pJLoAlM.cpp
    src/fun_QPN9GL96pvVd4w6y.cpp
    src/fun_QPrnpeYiUhRGZSfV.cpp
    src/fun_QQvEDYYoEEk2ZwiT.cpp
    src/fun_QXtsxmTgo1dAbtNq.cpp
    src/fun_QZ97H52NuDMxiPJc.cpp
    src/fun_QaeD0lSIDekApNN8.cpp
    src/fun_Qf4MOvEr6SwtIvHJ.cpp
    src/fun_QfFOM7bKM1i7mtHs.cpp
    src/fun_QhZxVj6hBzcc3eUl.cpp
    src/fun_Qi8ExjddyRw6SRaP.cpp
    src/fun_Qj1somKiacR0wfZq.cpp
    src/fun_QmxfxWh1uzTsekck.cpp
    src/fun_Qo5vjZUKqSWVGyLn.cpp
    src/fun_QpU8YtFwLhZwhepG.cpp
    src/fun_R2Yo3G8FLHdZk86b.cpp
    src/fun_R5096wkSSQfOwUng.cpp
    src/fun_R9MuqKyKehR32HQH.cpp
    src/fun_RBMq2dfUWcdiCZXp.cpp
    src/fun_RP9XwI1C4RQFVPMt.cpp
    src/fun_RRt9qrh0Ubp3zl2q.cpp
    src/fun_RVrAwJlltuN9XMhZ.cpp
    src/fun_RWC3ic7E2d00MmNZ.cpp
    src/fun_RXLodZksjHQuni9W.cpp
    src/fun_Ra1TYfoxaD6mh5Ax.cpp
    src/fun_RdYyfdZd5KArBWIn.cpp
    src/fun_RezAuLnfVVPCAWlt.cpp
    src/fun_RfqzcqATrzjk0Ici.cpp
    src/fun_RgSkksPTvrKMdaWk.cpp
    src/fun_RlkoCfnbUomxUIwe.cpp
    src/fun_RpRNSYNS9xNFaWzJ.cpp
    src/fun_RuK2b7fDx5j3U2T7.cpp
    src/fun_RxOkHkyyb4goRbkH.cpp
    src/fun_RzdH5boHhIF6sOzo.cpp
    src/fun_S48S7ER8e9UXF1C0.cpp
    src/fun_S7fXf0X52cQVkCq3.cpp
    src/fun_SAsaVELlRGU2eoWq.cpp
    src/fun_SJd1vjanqF5dnBDf.cpp
    src/fun_SRodpauLuoWH8mtQ.cpp
    src/fun_SUQiTfoYBGM92ILs.cpp
    src/fun_SWqKSy4aejAFjNxa.cpp
    src/fun_SYtKB9Ezon5CbE9S.cpp
    src/fun_SaIRSSQIwpVpU2mN.cpp
    src/fun_Sf3vojGKMY0c5G0Q.cpp
    src/fun_Spp3VHSChrQ517y6.cpp
    src/fun_SqKb1GJ7AA0DdPaS.cpp
    src/fun_SsQqV11ElNp2w6Qk.cpp
    src/fun_Svnu7cvN5t8BtR7W.cpp
    src/fun_T36xZJVdNBdHTxGB.cpp
    src/fun_T5N1EpMD7QYsR2ka.cpp
    src/fun_TAyeV4hrEUk7N2hh.cpp
    src/fun_TRDGDL0puXbfpM9j.cpp
    src/fun_TTzpscJ86ShVAqRu.cpp
    src/fun_TW9SbFIghYwUIsyM.cpp
    src/fun_TbY48JxmfmjRCnO1.cpp
    src/fun_Tj45hnx3W5sJzt13.cpp
    src/fun_TqA8vEw2QiYXv0b7.cpp
    src/fun_TtCmusBA20pVeu3L.cpp
    src/fun_TuFgz7FGzDsGUWE4.cpp
    src/fun_TuJBtzcjFObxg9DA.cpp
    src/fun_U2AZ2Es9TeyRkidf.cpp
    src/fun_U2yCqRjS1vpOmGzW.cpp
    src/fun_U6RoULkcltiorlYe.cpp
    src/fun_UASIp8z8SPNFE3Cz.cpp
    src/fun_UKlnHPyO0pitvRtX.cpp
    src/fun_UQeTY9xLcPIpQoyV.cpp
    src/fun_UVYl5gVW5jK4epgE.cpp
    src/fun_UX0SFVY0pNDsKB0L.cpp
    src/fun_UXEjAWYu7NzSoLJb.cpp
    src/fun_UanhdZ9XgqwNle2v.cpp
    src/fun_Ub1SbCNmye3lkwnO.cpp
    src/fun_UhYz5L5kV2mnPXtU.cpp
    src/fun_Ur5q7vYNigndv1Bo.cpp
    src/fun_Ux6tk7yVYEGVABlg.cpp
    src/fun_V0r03EQ7p1YbrIdw.cpp
    src/fun_V48RAjU6rLZKKLDk.cpp
    src/fun_V6dDbvUrfGWLsJHB.cpp
    src/fun_VC6yDPXkuutPkSjo.cpp
    src/fun_VH96le4aaKoDsM8J.cpp
    src/fun_VHuNLe5Ld4ptH2TP.cpp
    src/fun_VNVPCAaU0WdNMMGv.cpp
    src/fun_VRY3C8pSnVSfGcPj.cpp
    src/fun_VTCYzHx8H39TtfAg.cpp
    src/fun_VTJrrNhnuEqLN0ip.cpp
    src/fun_VZWO4cgmNvQVZCHk.cpp
    src/fun_VdEoRf9PTdOjm9um.cpp
    src/fun_VdW8w4mVVlNDM752.cpp
    src/fun_Vn4iESc9uGqAqTWa.cpp
    src/fun_VwG3Do76hxUwFy8l.cpp
    src/fun_W2NG1K5TCsM1f9Xg.cpp
    src/fun_W2rCtDjTn8N3UOb9.cpp
    src/fun_WDxsvJTd0ageldc5.cpp
    src/fun_WEFb2WmweervETCw.cpp
    src/fun_WHKCxVzQ2iAdHZzk.cpp
    src/fun_WQrfAjoZnuTTjLgg.cpp
    src/fun_WSzwtNMFtWCdN2ki.cpp
    src/fun_WUdEIRbxq1Sd8HWv.cpp
    src/fun_WVs73rPgPnAivRnP.cpp
    src/fun_WaN3WJpkRCkczPK2.cpp
    src/fun_WbAVH5a0AyDeG08D.cpp
    src/fun_We7P6KFlDnEeoPZo.cpp
    src/fun_WfN25QjXhSnBjq6x.cpp
    src/fun_Wm0JsRb9UZ0S4wNL.cpp
    src/fun_Wv7RJAp8GIGFJNnp.cpp
    src/fun_X7jcNf9pRCAesnpi.cpp
    src/fun_X9z2GQznARMXJ4ZQ.cpp
    src/fun_XAcR8sTS2wWWra61.cpp
    src/fun_XCm2Eet6fuHlafJq.cpp
    src/fun_XDFZtM4XNbstpBql.cpp
    src/fun_XEblBpGylyCYcR2m.cpp
    src/fun_XI1z7dMBoQWUe5cX.cpp
    src/fun_XSlgdnIe9JHE0XVm.cpp
    src/fun_XTLGlerDD7at6dDu.cpp
    src/fun_XUUAjGKem7ltyrMu.cpp
    src/fun_XcrocHV3VvQhPD7H.cpp
    src/fun_XkKWTCurbWYBKh5q.cpp
    src/fun_XoeUKNclk2bQrovz.cpp
    src/fun_Xu3Q4hkvwICiti6x.cpp
    src/fun_Y1U89IbmbRXevkHN.cpp
    src/fun_Y2At5SMzmoyAZzcT.cpp
    src/fun_Y2vBLIY4H13AhzW3.cpp
    src/fun_YA6GprT9wakZB5Xg.cpp
    src/fun_YDG1gglHg3nNiGNm.cpp
    src/fun_YJm6RuTOn2ypk1ub.cpp
    src/fun_YLHvCMfNlUlR0aNg.cpp
    src/fun_YPNO9bGsAuQ829yG.cpp
    src/fun_YPodAWmCBbgjRcje.cpp
    src/fun_YQ4LMdXf4nvmSUV3.cpp
    src/fun_YTRFaayyrT622wTF.cpp
    src/fun_YUyLP8pQPyIpYt54.cpp
    src/fun_YYQ6KeA1ug9ZjsAY.cpp
    src/fun_YYkEJWWzIs9WnhOH.cpp
    src/fun_YaF0am23MqkXGo17.cpp
    src/fun_YcrKjRHRU5bL5p9D.cpp
    src/fun_YdmA9l40rxb4QTQ5.cpp
    src/fun_Yge65gbZuK2xsmSy.cpp
    src/fun_Ygq6bQPdHrpwC3QM.cpp
    src/fun_YhJyyGpUHvltTmU6.cpp
    src/fun_Ys3MXfYbA4ENeNjd.cpp
    src/fun_YujIDn1LsvSFsq3V.cpp
    src/fun_YyIZsBFbod8ZSLA0.cpp
    src/fun_Z4xQUTpD17EEsCBd.cpp
    src/fun_Z51TY3GRT5Q2Mk5q.cpp
    src/fun_Z5MUmHupL497ualm.cpp
    src/fun_Z8gUsccmdCN8GOxY.cpp
    src/fun_ZKlniu8TTvYpJm5K.cpp
    src/fun_ZKwPOlL2YcUKJKtQ.cpp
    src/fun_ZMmHkBPcrs5gtUCE.cpp
    src/fun_ZZmgC8d0L4rvrgzL.cpp
    src/fun_Zk0bLkUBkERi0TZ5.cpp
    src/fun_ZkQum2LglMoRWV47.cpp
    src/fun_ZviYFPGzQWs3zMBU.cpp
    src/fun_a3hK170qG8C6hLB0.cpp
    src/fun_a8GOXNyzdRjba2zw.cpp
    src/fun_aJe7j8TtmFtaGFSE.cpp
    src/fun_aUqKAgRLO2Hag1Sq.cpp
    src/fun_abDnXbLvSbcbj8eb.cpp
    src/fun_acy3siepSrBJ27ZG.cpp
    src/fun_adTg6v9NaMrGXilS.cpp
    src/fun_aiBTA3UsGzIDl0oL.cpp
    src/fun_aiJPsKG02XBCzLSF.cpp
    src/fun_akygULnUbGVWcKHb.cpp
    src/fun_aw5xokaDOmAsG3Jt.cpp
    src/fun_ayRVLwqx7mbVhtKB.cpp
    src/fun_b6iRE0LQkVh6GW86.cpp
    src/fun_b9U7E46xkoDjP9Cw.cpp
    src/fun_bA2xh2nvGNJq4KPC.cpp
    src/fun_bCYahnIAsXbQ6kJe.cpp
    src/fun_bD65DihDdeIExN6R.cpp
    src/fun_bDZAgzALKmBykabr.cpp
    src/fun_bDuoxQiyDpzYbOWN.cpp
    src/fun_bFElA3vf9gfFaAtT.cpp
    src/fun_bHkkCqel3ddBOYDE.cpp
    src/fun_bM1Knn3QRY1MLds8.cpp
    src/fun_bOqBL3QTlf4JIUw1.cpp
    src/fun_bPh4ZnaSckKS4vEJ.cpp
    src/fun_bVh3idZqek5zi9x9.cpp
    src/fun_bZ294qWQP5TZOF4J.cpp
    src/fun_bkytpVnfErDhftYR.cpp
    src/fun_blCAmwCIAD3FhjnI.cpp
    src/fun_bn5pY2LCrpK5pXZX.cpp
    src/fun_buM1X9R5ahUldQjA.cpp
    src/fun_bvKR8VvjWLaAaRIV.cpp
    src/fun_bx4OeskVtqOpzyGu.cpp
    src/fun_c1Mmy80xizbjgONW.cpp
    src/fun_cHIBupD2ixn1ZXLF.cpp
    src/fun_cIwsIp3z8wE4MeLZ.cpp
    src/fun_cOPQpOvXYHvNZTD6.cpp
    src/fun_cQ2O3snff2taAvmu.cpp
    src/fun_cRcXhy9SpH1Q9VSX.cpp
    src/fun_cYTwhk2oRcdPzYX2.cpp
    src/fun_cklJVyRJ5AfMUifk.cpp
    src/fun_cnGUGvN0WY6VYTat.cpp
    src/fun_ctxpwtAcb1DRuJbV.cpp
    src/fun_cvspBu5O6vJc5O1m.cpp
    src/fun_czc9Ybh8bHOtGVLo.cpp
    src/fun_d1h05tsfKQZ8XH7e.cpp
    src/fun_d4qnkYhFAJIpozPx.cpp
    src/fun_d5V1GjChCMNEVq6U.cpp
    src/fun_d6cFgAr1N1dds7a9.cpp
    src/fun_dDIzJMGg84znjvpU.cpp
    src/fun_dNxMez8yEngMHaDG.cpp
    src/fun_da2Uw57Z1pbaSY57.cpp
    src/fun_ddQsdbskTbod3Rh0.cpp
    src/fun_djUSBaxzLmIdb60k.cpp
    src/fun_dpoUHblMxeurKbqy.cpp
    src/fun_drmR7lXztpOc3Xf4.cpp
    src/fun_dyYQeHKcebNP0F2M.cpp
    src/fun_e33ifvwYU1jpP9BO.cpp
    src/fun_e3xi1Jfvoztjqy75.cpp
    src/fun_e8KLgsOq4dmsRP0a.cpp
    src/fun_e8v8fxrssPNAsIhi.cpp
    src/fun_eAD533TvF2tN8aqp.cpp
    src/fun_eAKeYj5MWMBUg2cO.cpp
    src/fun_eDmYoyG1lVpu9dIS.cpp
    src/fun_eEzD8R7xMMyiTeXT.cpp
    src/fun_eFlbCNvZnzIYrRED.cpp
    src/fun_eG9iNQpoHfmo0284.cpp
    src/fun_eOAnUNub14t7kVss.cpp
    src/fun_eUpHsvNCaWYqsFT8.cpp
    src/fun_eVin9ya12Vo0uXjw.cpp
    src/fun_ec3NLdSncp2NUBHC.cpp
    src/fun_egU1Zm9Z8akC6X9z.cpp
    src/fun_ehAcGjk9HnnCh7WC.cpp
    src/fun_ekD6UxQe4siduY7y.cpp
    src/fun_emmJ5sCiBgRSaMiS.cpp
    src/fun_eoGkScgBt1lCDnub.cpp
    src/fun_euQ85fx8uS0NYd7S.cpp
    src/fun_evkx9MbU0dHMIx7s.cpp
    src/fun_ewPSzRe1mQQzmUam.cpp
    src/fun_ewnYtxCBTH16eAaR.cpp
    src/fun_f1SRhTcA2MlYpi10.cpp
    src/fun_f1jBhc3KPcugxPkW.cpp
    src/fun_f2SwWZCcxugNzQAK.cpp
    src/fun_f2ldgQ8fThvtQbiq.cpp
    src/fun_f5EfgwQLsn3sceiw.cpp
    src/fun_f9WQnI5x2Tup1LWz.cpp
    src/fun_fDGPZkCvvdrLEDre.cpp
    src/fun_fPiKoeTr1D7NrgUQ.cpp
    src/fun_fRima3gAIdIgh2IY.cpp
    src/fun_fUw6EMOHghBSxGf7.cpp
    src/fun_fVScLMZ56I8gEOo3.cpp
    src/fun_fc61kNg2JEyq2fVb.cpp
    src/fun_fd0CqqmqHsFWfRz9.cpp
    src/fun_ff0cw0BI2f8IDfEl.cpp
    src/fun_fgJBIqQ74hqniGOi.cpp
    src/fun_fhmafxnz50kIhcDm.cpp
    src/fun_fi081sfgph3ntc8T.cpp
    src/fun_fvy4VWuy8lmfyWaf.cpp
    src/fun_fxy7yelz0UGlxqHE.cpp
    src/fun_g2NKLIcA16K6C9dp.cpp
    src/fun_g2lyQqWrH2Cnnv3A.cpp
    src/fun_gCStgw7bYyzzEVjW.cpp
    src/fun_gFVjvfsi8nP6m6dP.cpp
    src/fun_gJJGe2PifYKgzRWy.cpp
    src/fun_gYYi8xe3CjQsID09.cpp
    src/fun_gb6wEwxOBewZWRkb.cpp
    src/fun_gdPLLSKo0E8xRGn2.cpp
    src/fun_gfhji1EzYOdZMjgM.cpp
    src/fun_gmYvNFsYrpkAnQpS.cpp
    src/fun_gmcjNKOD5EH2iFhm.cpp
    src/fun_gpU3vhuuKPZr927o.cpp
    src/fun_gu9luxRUwZcmki4P.cpp
    src/fun_gypCHZ5y0XnzVrQL.cpp
    src/fun_h2GLyBagI3J0WxQq.cpp
    src/fun_h2qtDiwrMzbQ5qmW.cpp
    src/fun_hHNSPAHHFOglsH3X.cpp
    src/fun_hHcUR8w1W1c17ogF.cpp
    src/fun_hI5k0CX1vuoE8F5e.cpp
    src/fun_hJqjS6rZkxorCCOw.cpp
    src/fun_hKWStgI8cGAm7YtW.cpp
    src/fun_hKdsygmwFcnkdhLj.cpp
    src/fun_hPFnnrOxOwzgWz3Y.cpp
    src/fun_hPv7fzI7FVaJWRs9.cpp
    src/fun_hZ5UpkotoVDxyxZH.cpp
    src/fun_hf1PRBiYceaFFfqC.cpp
    src/fun_hjPFaKFexMXK0x0w.cpp
    src/fun_hntdjQAz8IO3L3aQ.cpp
    src/fun_hqUQWJkvIgWx2nXz.cpp
    src/fun_hvYVZfOzhipNZC5Z.cpp
    src/fun_hzYNxpj2jC6S4VI9.cpp
    src/fun_i02XcClrr4jDusrT.cpp
    src/fun_i8Fmdue2mRkrlnbb.cpp
    src/fun_iAEIcgq8F195slIz.cpp
    src/fun_iCQbbCTaVr0PurbT.cpp
    src/fun_iQsIvntYR9eeTC2c.cpp
    src/fun_iR5lj9upwOylHcR3.cpp
    src/fun_ihW9q0VDow7RixFb.cpp
    src/fun_ihdK5FHiMlqDnTwk.cpp
    src/fun_ihkMrZ7coxRCFuIp.cpp
    src/fun_ioFsYYOwQfw7c7YU.cpp
    src/fun_ip1FNuj835QnOJ2V.cpp
    src/fun_isi9SJAUcbtseXM1.cpp
    src/fun_iul7sCriht85C7B0.cpp
    src/fun_j35gACMfcBEnkaVh.cpp
    src/fun_j39DBNdTdfXs5ig1.cpp
    src/fun_j6NX9FLIH1HEG7FE.cpp
    src/fun_j7bKo1uhgAZik79Z.cpp
    src/fun_j7f95qZpswewQVp4.cpp
    src/fun_jDzuEZFEyaOGVmZg.cpp
    src/fun_jEwNtrsuxRe7lp1f.cpp
    src/fun_jFJrXdP0YAciljHH.cpp
    src/fun_jV8gzhMtZXKNe6O0.cpp
    src/fun_jV9cigDTiOANyYNT.cpp
    src/fun_jXxf4cGvVwAl8cQe.cpp
    src/fun_jg34WbwtBnLmx3DQ.cpp
    src/fun_jh2N0M0cQklNEna8.cpp
    src/fun_jkFyzhgBpEPDWfT4.cpp
    src/fun_jngGvJSiJugl8daw.cpp
    src/fun_jqjfL9lSBlmflIlc.cpp
    src/fun_jrjlH5FcukeSZOur.cpp
    src/fun_jz49Vvn3K1lUJiWM.cpp
    src/fun_jzocyj2hUDZR4Bhy.cpp
    src/fun_jzw66TaKYXEuSkt2.cpp
    src/fun_kAQju92D6SktFhLG.cpp
    src/fun_kDfL9ztD6KnhhEfp.cpp
    src/fun_kH6aYnaKzvAEDXSS.cpp
    src/fun_kLYPjjLkrGU7jzTx.cpp
    src/fun_kal1ysNIODnOHZGo.cpp
    src/fun_kcobDQsk09c0r2Cr.cpp
    src/fun_keEwGmIUt1sCR6Vu.cpp
    src/fun_keLl9rrpcvp1k5V9.cpp
    src/fun_kiKerNZZ2qO1wVWi.cpp
    src/fun_kiQ5QQeMCJZXn5pU.cpp
    src/fun_kkNwJGoZs3QsgtDF.cpp
    src/fun_kpwEd3DRbsDBmrua.cpp
    src/fun_kwF6BFoJffu5MF2t.cpp
    src/fun_kyKTRV1II2VrmBf1.cpp
    src/fun_kyndxCR3fyGvy39z.cpp
    src/fun_kys1kDXsA80qQI4z.cpp
    src/fun_l0BO67dYXyfgN30D.cpp
    src/fun_l4ukqIPznNXf2WLm.cpp
    src/fun_l5khWJr7cemjyb3C.cpp
    src/fun_lCtmRELt9f6czKi1.cpp
    src/fun_lEw61VFshqj1zklc.cpp
    src/fun_lKOlMcN21ixfwMNw.cpp
    src/fun_lMNfoZyeAFoiQXj0.cpp
    src/fun_lO6rtk2OBJoxzrNe.cpp
    src/fun_lQ7QJteWyYuU6wyw.cpp
    src/fun_lQQKgIhJVlytzyVk.cpp
    src/fun_lX9fs6ZDP6tCbbRL.cpp
    src/fun_lc5cfa106HmtVCux.cpp
    src/fun_ledgIITnj6qG5Hgt.cpp
    src/fun_loV2d1rt5YS5MMkR.cpp
    src/fun_ltxUWLvcy1ZJ22jD.cpp
    src/fun_luG2NP8CmF3BwLKq.cpp
    src/fun_lvAfWKsMq7nqZk84.cpp
    src/fun_lvP7TklokpPVSOPJ.cpp
    src/fun_m1L0XPxhFHGXZPXd.cpp
    src/fun_m2y252ZDJSJls3Sw.cpp
    src/fun_m3r5IxhtXfEBBup1.cpp
    src/fun_m527cSt6mSbXWnEG.cpp
    src/fun_m6dU1cdrv8ToX0O0.cpp
    src/fun_m7qXBzQkPfCw9N6t.cpp
    src/fun_mCzsmXhDvUgSh9Ga.cpp
    src/fun_mDncso8RP5NkcZHd.cpp
    src/fun_mODgASPWi3YI9j7D.cpp
    src/fun_mRpIER8LuCwYZwA8.cpp
    src/fun_mTJYGsm2x4vJAY3w.cpp
    src/fun_mbyXySpcRw6ZfcM7.cpp
    src/fun_mcKQNNtQY2M7KKqk.cpp
    src/fun_mjQx24iydxrfZT95.cpp
    src/fun_mxuSckmz6K4gfjTZ.cpp
    src/fun_my15S6gfTpuGmJnE.cpp
    src/fun_n25cKEk372M6hyVo.cpp
    src/fun_n4VxLXNG06v17KOW.cpp
    src/fun_n52P56kwNtac3cE9.cpp
    src/fun_nLoWaXPgZ0Cqnibt.cpp
    src/fun_naaOdLkjmizMYFuJ.cpp
    src/fun_nd6EPlWFAyiNbciH.cpp
    src/fun_ndRklqC1aLyZB78T.cpp
    src/fun_neVWmFla0d1BA9G9.cpp
    src/fun_ntM93NTt8TLrRuU5.cpp
    src/fun_nxj7tmFrvVH8UDMx.cpp
    src/fun_nyy81ozzFAVnEpSA.cpp
    src/fun_o16c3sVUp0lsftC1.cpp
    src/fun_o1v2lj2K9FkvUM3e.cpp
    src/fun_o3MshqUlWTvbx23Q.cpp
    src/fun_o5B9ziKdUVaLmp8H.cpp
    src/fun_o7YzUueELoOnIUun.cpp
    src/fun_o7q0ZvUdgoMM0Bhc.cpp
    src/fun_o9D0ZHznpPpH2OIn.cpp
    src/fun_oHkDCEF9iyXrw3Jh.cpp
    src/fun_oNsJefAqGTsljzzt.cpp
    src/fun_oR38lF9L5KOoL2cn.cpp
    src/fun_oS08s6dt6MaGK8Iv.cpp
    src/fun_oSTdQhGtR8dhSWgH.cpp
    src/fun_oghB5iBuuM0hOdRL.cpp
    src/fun_oh1nsipTOv4GqlAk.cpp
    src/fun_oiWWikOIP1FZasrH.cpp
    src/fun_omtJjLIknlizc3qe.cpp
    src/fun_osWasHwnjVnJ9d6o.cpp
    src/fun_ovKdW7xA32Swidos.cpp
    src/fun_oyiFbbk8SHa6COJx.cpp
    src/fun_p5mCldIUCTSZGcn1.cpp
    src/fun_p94LQnlKNu3pkuXr.cpp
    src/fun_p9ERxBkDvIY2q4gW.cpp
    src/fun_pD6qKCaJcWhmjuEZ.cpp
    src/fun_pHBv2aUQqDDoYyt9.cpp
    src/fun_pNUaEeJXJ11u3Is2.cpp
    src/fun_pROaPsFESkePq33i.cpp
    src/fun_paxDvQTz2JEBpElt.cpp
    src/fun_pbTlOQ5DckMXL8AY.cpp
    src/fun_penOSpNLeGjlJuAe.cpp
    src/fun_pfSfpthvo3lFoeXe.cpp
    src/fun_pjf8uRhDKomVkoQa.cpp
    src/fun_q14xCAueaRhqBMdx.cpp
    src/fun_q1prG7jSI65f1Zpl.cpp
    src/fun_q4znRlbCpelOwope.cpp
    src/fun_q7lEWOOlm1scZI1A.cpp
    src/fun_q9fXBDIWpATI1PoX.cpp
    src/fun_qDwBjl0YPiBKpkRF.cpp
    src/fun_qM42tWExh14DEWdA.cpp
    src/fun_qQqZG1VWwYy13HUP.cpp
    src/fun_qSjgK10ERsLboQgR.cpp
    src/fun_qjgE5jyZ3W0eHztt.cpp
    src/fun_qjs41mikZkz12TcW.cpp
    src/fun_qobahw3HHa3D41fr.cpp
    src/fun_qpafgnVlXU1feQ3Y.cpp
    src/fun_qphAdrGl0DW2cBKg.cpp
    src/fun_qqYQ9adIyA5RBMF3.cpp
    src/fun_r0Et6hnNKl7lcvsr.cpp
    src/fun_r1oEd7KI9uoC2ETd.cpp
    src/fun_r4pE8GWwc56viofM.cpp
    src/fun_rCUkqNpi6Zr99ilH.cpp
    src/fun_rCzfEFtdp63btNj0.cpp
    src/fun_rD0XUuAHMgizTEBM.cpp
    src/fun_rGZbQEGQG7sLapyy.cpp
    src/fun_rIG2vr8wk47Vt0dp.cpp
    src/fun_rIifV2EAKApP8WpG.cpp
    src/fun_rLZ00IfZfuQctpDJ.cpp
    src/fun_rObAS3DQKOjHkR1L.cpp
    src/fun_rTttFo2M2ik7IgA7.cpp
    src/fun_rVxS77724cOvpTvc.cpp
    src/fun_rZNTNM9MjOuaVKDS.cpp
    src/fun_rZzwPb2672WDPSTt.cpp
    src/fun_rfKC0YN23mevcc0h.cpp
    src/fun_rjc4MSs2jTxybVhK.cpp
    src/fun_rlcq71aShEr3OqmR.cpp
    src/fun_rn2FCoFKCdDHWmvS.cpp
    src/fun_rp4nisN9SfBdaUCU.cpp
    src/fun_rt6MFCfxy73gD8Si.cpp
    src/fun_rtPFu6kiCV0cuKQP.cpp
    src/fun_ruoAq2sconLgyLO8.cpp
    src/fun_rz870m3bQOpQjHs7.cpp
    src/fun_s00gSMXNyz6qabu2.cpp
    src/fun_s2N9GQ1slnvkI7w2.cpp
    src/fun_s3boc9yQxMSIXXtZ.cpp
    src/fun_s5sAvL5B2Ws2mNBN.cpp
    src/fun_s9sEM3xK64c2T4wu.cpp
    src/fun_sE1PSWvPc13tyCNV.cpp
    src/fun_sEWwlSKjbOvm2Spy.cpp
    src/fun_sFX8a6suB4pElBay.cpp
    src/fun_sGtBAwkt56b28Ij7.cpp
    src/fun_sIneyuWO4ee45fGZ.cpp
    src/fun_sIuMK4zXUpaPOiou.cpp
    src/fun_sJgIjLcT0LohETql.cpp
    src/fun_sP1jt3DSLJqVn3S2.cpp
    src/fun_sQdg8a3gLdWAw7A5.cpp
    src/fun_sT4JY6wBekj5srz7.cpp
    src/fun_sVCRnWYlz8pfpGVx.cpp
    src/fun_sWrnIVy6rb5EUxme.cpp
    src/fun_sbH1NoAhvMwTQqVM.cpp
    src/fun_seYwJNfUZ7Yo6Lq9.cpp
    src/fun_seyKDm4yrLLDKqbm.cpp
    src/fun_sf3NHYuEZimD3NsB.cpp
    src/fun_sgsYEmLREBU670Tj.cpp
    src/fun_sjhKXVKULM3LYUjh.cpp
    src/fun_stNdyGiQUDL2AFnw.cpp
    src/fun_sx1x9YkAUuHinjZD.cpp
    src/fun_t3UgjAevoPwsZmdp.cpp
    src/fun_t3xAdvNW99EY7sna.cpp
    src/fun_tAcjbNgpx4xeraZH.cpp
    src/fun_tFs7pOAedJpKifXz.cpp
    src/fun_tN9JH9HSUoiX7QDU.cpp
    src/fun_tU27MQIu9H57Esbp.cpp
    src/fun_tadRwx82KYxqUstt.cpp
    src/fun_tfw1dwLwJ7VWgAN3.cpp
    src/fun_ti7chNWSptXh41K9.cpp
    src/fun_tipgF9IeNmthWlPC.cpp
    src/fun_tlPTygBKbqIhI0Jk.cpp
    src/fun_tq1f1ZdhgCudZcQi.cpp
    src/fun_ts12tizj73B4zzKe.cpp
    src/fun_tteLJlgK212aVlyT.cpp
    src/fun_tvPH3SK4P72JvgoV.cpp
    src/fun_u4iseA54NeA6oG9s.cpp
    src/fun_uAcwhfQwiNFaaEbn.cpp
    src/fun_uEUAlFTLdIjG0gOX.cpp
    src/fun_uIpAU822AV9dd1H5.cpp
    src/fun_uLMKWdrJZaoN3uqH.cpp
    src/fun_uQ1D74rN2e2s3Cso.cpp
    src/fun_uQMaEbAh5zdaHAP5.cpp
    src/fun_ubFqxnd56cX49SVZ.cpp
    src/fun_uc7OGthg9VhF6vUo.cpp
    src/fun_udSC2MENsbajGqkB.cpp
    src/fun_un7N1BPJOh0fE9KF.cpp
    src/fun_uteCKcJvG8BBE6CG.cpp
    src/fun_ux4ZkSvuUW6jAoiE.cpp
    src/fun_v2m0C2zEw9q0dHKm.cpp
    src/fun_v512yeUwrT7aGDrB.cpp
    src/fun_vHzz7hGjnz47DF71.cpp
    src/fun_vXDwayQ6zBBXRJE2.cpp
    src/fun_vXLtasgzXj0zWoqm.cpp
    src/fun_vaCxMfnVnYJTRGSD.cpp
    src/fun_vetj1ZNIouaya4TU.cpp
    src/fun_vfZdn52UmCfSnIg3.cpp
    src/fun_vl5pYZzCrUx9gZeE.cpp
    src/fun_vn3if8uv7kMS23yc.cpp
    src/fun_vqG7uqqetyuK7K1M.cpp
    src/fun_w5NWLC6Ii0mSKNU3.cpp
    src/fun_w6B5YNnXxrP4e0Zl.cpp
    src/fun_w7Rctibkx4Izb0oZ.cpp
    src/fun_w8E4aFeKpkpWjBp0.cpp
    src/fun_w8tt2TDqFLq1sdxZ.cpp
    src/fun_wENLyGNsMsbXwfkR.cpp
    src/fun_wFOH0Qg376zFFwo6.cpp
    src/fun_wVv7set1u43P0ILB.cpp
    src/fun_wWfGNLk6VaMVc1lE.cpp
    src/fun_wYLMwq8VDUMehW2p.cpp
    src/fun_wgwmvcjMhpjb0RAS.cpp
    src/fun_wh9GRGXMq0cijT4k.cpp
    src/fun_whMHT2GOZU3NEQUB.cpp
    src/fun_wivFHIh0xRWWjYMW.cpp
    src/fun_wxqUMo9twUWiXlum.cpp
    src/fun_xBqaRTmAImpTMSCl.cpp
    src/fun_xGAGRO6gL98F6eYH.cpp
    src/fun_xOoJeGKsqYojlh9j.cpp
    src/fun_xQahACtywJqKPM1x.cpp
    src/fun_xS6mSsEsBNZrPL0B.cpp
    src/fun_xWu7zncMZa4cWAFn.cpp
    src/fun_xXwEZwzZJEwhtMDP.cpp
    src/fun_xb85aQU1uwwcMu1r.cpp
    src/fun_xcHpmFgBCCIBJWmO.cpp
    src/fun_xiJA6Lzif5bKvtll.cpp
    src/fun_xlObv6OVG2MKV6AE.cpp
    src/fun_xnPNCNqX4N9YkAws.cpp
    src/fun_xnwpcv1dPyETTCQb.cpp
    src/fun_xomTxeo7YpXiu0LF.cpp
    src/fun_xqCJk8jgoMYockEL.cpp
    src/fun_xqiqfMSOPAw10Pn7.cpp
    src/fun_xuMrPm7cmM0VBox8.cpp
    src/fun_xuhyfkg4DIeEWbyH.cpp
    src/fun_y3jYJoK9D6dVxNAa.cpp
    src/fun_y9PTkEX8CbXBMKtd.cpp
    src/fun_yNTTpBqn22fmhoa9.cpp
    src/fun_yYFflxOZw6Ilgnwv.cpp
    src/fun_ycWF7OdGdX7OMQ0i.cpp
    src/fun_yhTIEffs9ZWdvZf8.cpp
    src/fun_ysw80QL98TUUxoG5.cpp
    src/fun_ytD6spzAymICSNXw.cpp
    src/fun_yzf1q6UA5P7agZ77.cpp
    src/fun_z0Y3BGr2o0ZH2MT3.cpp
    src/fun_z1KIm0X9riPEpNbt.cpp
    src/fun_zCcMiYzGvcMImjSm.cpp
    src/fun_zDcYL2bb8bWtCkUc.cpp
    src/fun_zFHvjjVe4U7EPEjb.cpp
    src/fun_zI6eYABt2Gpg9hIp.cpp
    src/fun_zIi4g4JG1jJtIac4.cpp
    src/fun_zIyxT0yEGTMsFEAz.cpp
    src/fun_zLXBecO17sAIbivC.cpp
    src/fun_zT7lxEHjVaMdrPIn.cpp
    src/fun_zViY9i7YagsCPdfV.cpp
    src/fun_zXGhssJJYhDap1ms.cpp
    src/fun_zcQ4GzCZGBXoOJun.cpp
    src/fun_zha7WGejSQeWq9xP.cpp
    src/fun_zs6HOl6t99n8zJRE.cpp
)

# Create static library
add_library(LeetCodeLibrary STATIC ${SOURCES})

# Test executable
add_executable(LeetCodeLibrary_test main.cpp)
target_link_libraries(LeetCodeLibrary_test LeetCodeLibrary)

# Installation
install(TARGETS LeetCodeLibrary DESTINATION lib)
install(DIRECTORY include/ DESTINATION include)
